zaakafhandelcomponent-1286 Toevoegen lezen actie op zaak en enkelvoudigInformatie object